--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SC052303 - Redessign Showcase mật hoa dừa</title>
+    <title>SC052303 - Redessign Showcase TINH DẦU THẢO MỘC XANH</title>
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Expires" content="-1">
     <meta name="keywords" content="">
-    <meta name="description" content="SC052303 - Redessign Showcase mật hoa dừa">
+    <meta name="description" content="SC052303 - Redessign Showcase TINH DẦU THẢO MỘC XANH">
     <meta id='viewport' name='viewport' content='width=device-width, initial-scale=1' />
     <script
         type='text/javascript'>window.ladi_viewport = function () { var screen_width = window.ladi_screen_width || window.screen.width; var width = window.innerWidth > 0 ? window.innerWidth : screen_width; var widthDevice = width; var is_desktop = width >= 768; var content = ""; if (typeof window.ladi_is_desktop == "undefined" || window.ladi_is_desktop == undefined) { window.ladi_is_desktop = is_desktop; } if (!is_desktop) { widthDevice = 420; } else { widthDevice = 1200; } content = "width=" + widthDevice + ", user-scalable=no"; var scale = 1; if (!is_desktop && widthDevice != screen_width && screen_width > 0) { scale = screen_width / widthDevice; } if (scale != 1) { content += ", initial-scale=" + scale + ", minimum-scale=" + scale + ", maximum-scale=" + scale; } var docViewport = document.getElementById("viewport"); if (!docViewport) { docViewport = document.createElement("meta"); docViewport.setAttribute("id", "viewport"); docViewport.setAttribute("name", "viewport"); document.head.appendChild(docViewport); } docViewport.setAttribute("content", content); }; window.ladi_viewport(); window.ladi_fbq_data = []; window.ladi_fbq = function (track_name, conversion_name, data, event_data) { window.ladi_fbq_data.push([track_name, conversion_name, data, event_data]); };</script>
-    <link rel="canonical" href="http://preview.ladipage.me/645e1049954d0e001291aa9f" />
-    <meta property="og:url" content="http://preview.ladipage.me/645e1049954d0e001291aa9f" />
-    <meta property="og:title" content="SC052303 - Redessign Showcase mật hoa dừa" />
+    <!-- <link rel="canonical" href="http://preview.ladipage.me/645e1049954d0e001291aa9f" />
+    <meta property="og:url" content="http://preview.ladipage.me/645e1049954d0e001291aa9f" /> -->
+    <meta property="og:title" content="SC052303 - Redessign Showcase TINH DẦU THẢO MỘC XANH" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="SC052303 - Redessign Showcase mật hoa dừa" />
+    <meta property="og:description" content="SC052303 - Redessign Showcase TINH DẦU THẢO MỘC XANH" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="dns-prefetch">
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
